--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="https://jsbin.com/jocafil/2">홈</a></li>
+        <li><a href="#hanni">홈</a></li>
         <li><a href="https://jsbin.com/gicixoq/1">신제품</a></li>
         <li><a href="https://jsbin.com/xifewox/1">여성</a></li>
         <li><a href="https://jsbin.com/noyemar/1/">남성</a></li>
