--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
     <nav>
       <ul>
         <li><a href="#hanni">홈</a></li>
-        <li><a href="https://jsbin.com/gicixoq/1">신제품</a></li>
-        <li><a href="https://jsbin.com/xifewox/1">여성</a></li>
-        <li><a href="https://jsbin.com/noyemar/1/">남성</a></li>
+        <li><a href="#">신제품</a></li>
+        <li><a href="#">여성</a></li>
+        <li><a href="#">남성</a></li>
       </ul>
     </nav>
   </header>
