--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Gucci</title>
+  <title>GUCCI</title>
+    <link rel="shortcut icon" href="https://i.imgur.com/fqnqUoi.png" />
   <style>
     body {
       margin: 0;
