--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <nav>
       <ul>
         <li><a href="#hanni">홈</a></li>
-        <li><a href="#">신제품</a></li>
+        <li><a href="https://jjh8085.github.io/CUCCI/">신제품</a></li>
         <li><a href="#">여성</a></li>
         <li><a href="#">남성</a></li>
       </ul>
@@ -167,7 +167,7 @@
   </div>
   <main>
     <div class="product">
-      <a href="https://jsbin.com/gicixoq/1" target="_blank">
+      <a href="https://jjh8085.github.io/CUCCI/" target="_blank">
         <img src="https://i.imgur.com/UNuVQBl.png" alt="신제품">
       </a>
       <div class="text">
