--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
     <div class="product">
       <a href="https://jsbin.com/xifewox/1" target="_blank">
-        <img src="https://i.imgur.com/H2JWKxY.png" alt="신제품">
+        <img src="https://i.imgur.com/H2JWKxY.png" alt="여성">
       </a>
       <div class="text">
         <h2>여성</h2>
@@ -184,7 +184,7 @@
     </div>
     <div class="product">
       <a href="https://jsbin.com/noyemar/1/" target="_blank">
-        <img src="https://i.imgur.com/b0KkCkH.png" alt="신제품">
+        <img src="https://i.imgur.com/b0KkCkH.png" alt="남성">
       </a>
       <div class="text">
         <h2>남성</h2>
