--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
       height: auto;
       justify-content: center;
     }
+
+    .footerlogoimg {
+      width: 100%;      
+    }
   </style>
 </head>
 <body>
@@ -199,6 +203,9 @@
       <li>여성: 신가온</li>
       <li>신제품: 정준호</li>
     </ul>
+    <div class="footerlogoimg">
+      <img src="gucci-logo.png">
+    </div>    
   </footer>
 </body>
 </html>
