--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <ul>
         <li><a href="#hanni">홈</a></li>
         <li><a href="https://jjh8085.github.io/CUCCI/">신제품</a></li>
-        <li><a href="#">여성</a></li>
+        <li><a href="https://gaonniyam.github.io/gaonno/">여성</a></li>
         <li><a href="#">남성</a></li>
       </ul>
     </nav>
@@ -179,7 +179,7 @@
       </div>
     </div>
     <div class="product">
-      <a href="https://jsbin.com/xifewox/1" target="_blank">
+      <a href="https://gaonniyam.github.io/gaonno/" target="_blank">
         <img src="https://i.imgur.com/H2JWKxY.png" alt="여성">
       </a>
       <div class="text">
