--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <li>신제품: 정준호</li>
     </ul>
     <div class="footerlogoimg">
-      <img src="https://i.imgur.com/YJV18Ah.png">
+      <img src="Gucci-Logo.png">
     </div>    
   </footer>
 </body>
