--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <li><a href="#hanni">홈</a></li>
         <li><a href="https://jjh8085.github.io/CUCCI/">신제품</a></li>
         <li><a href="https://gaonniyam.github.io/gaonno/">여성</a></li>
-        <li><a href="#">남성</a></li>
+        <li><a href="https://kimjiwoodo.github.io/-/">남성</a></li>
       </ul>
     </nav>
   </header>
@@ -187,7 +187,7 @@
       </div>
     </div>
     <div class="product">
-      <a href="https://jsbin.com/noyemar/1/" target="_blank">
+      <a href="https://kimjiwoodo.github.io/-/" target="_blank">
         <img src="https://i.imgur.com/b0KkCkH.png" alt="남성">
       </a>
       <div class="text">
