--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
       <li>남성: 김지우</li>
       <li>여성: 신가온</li>
       <li>신제품: 정준호</li>
+      <li>구찌 코리아 유한책임회사 <br>
+대표자: 실뱅 꼴라델 / 서울시 강남구 영동대로 517, 35층(삼성동, 아셈타워) / 사업자등록번호: 120-81-79834
+ <br> 통신판매업 신고번호 제 2015-서울강남-00052 호 (
+<br> 사업자 정보 확인
+)
+<br>개인정보보호책임자: 한소희 / 호스팅 서비스: Rackspace Hosting
+<br>클라이언트서비스센터 02-3452-1921 메일 문의 
+<br>clientservice.kr@gucci.com</li>
     </ul>
     <div class="footerlogoimg">
       <img src="Gucci-Logo.png">
