--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width: 100%;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, 120px);
       border: 20px;
       padding: 100px 20px 20px;
     }
