--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ddddd<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -54,7 +54,7 @@
       width: 100%;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(3, 120px);
+      grid-template-columns: repeat(3, 200px);
       border: 20px;
       padding: 100px 20px 20px;
     }
