--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ ddddd<!DOCTYPE html>
       width: 100%;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(3, 200px);
+      grid-template-columns: repeat(3, 1fr);
       border: 20px;
       padding: 100px 20px 20px;
     }
