--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ddddd<!DOCTYPE html>
     </div>
     <div class="product">
       <a href="https://gaonniyam.github.io/gaonno/" target="_blank">
-        <img src="https://i.imgur.com/H2JWKxY.png" alt="여성">
+        <img src="여성.png" alt="여성">
       </a>
       <div class="text">
         <h2>여성</h2>
@@ -188,7 +188,7 @@ ddddd<!DOCTYPE html>
     </div>
     <div class="product">
       <a href="https://kimjiwoodo.github.io/-/" target="_blank">
-        <img src="https://i.imgur.com/b0KkCkH.png" alt="남성">
+        <img src="남성.png" alt="남성">
       </a>
       <div class="text">
         <h2>남성</h2>
