--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ ddddd<!DOCTYPE html>
     .product img {
       width: 100%;
       height: auto;
-      margin: 0 auto;
+      margin: 15px;
       display: block;
     }
 
